--- a/LearningBasics/index.html
+++ b/LearningBasics/index.html
@@ -1,1 +1,12 @@
-make some changes fot test
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8"/>
+        <title>React intro</title>
+        <link href="https://fonts.googlepis.com/css?family=Roboto" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
+    </head>
+    <body>
+        
+    </body>
+</html>
