--- a/LearningBasics/index.html
+++ b/LearningBasics/index.html
@@ -5,13 +5,14 @@
         <title>React intro</title>
         <link href="https://fonts.googlepis.com/css?family=Roboto" rel="stylesheet">
         <link href="styles.css" rel="stylesheet">
+        <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+        <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+        
+        <!-- Don't use this in production: -->
+        <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     </head>
     <body>
-        <div class="app">
-            
-            <div class="list"></div>
-
-        </div>
-        <script src="vanilla.js"></script>
+        <div id="root"></div>
+        <script type="text/babel" src="react.js"></script>
     </body>
 </html>
