--- a/LearningBasics/index.html
+++ b/LearningBasics/index.html
@@ -13,6 +13,8 @@
     </head>
     <body>
         <div id="root"></div>
-        <script type="text/babel" src="react.js"></script>
+        <!-- <script src="vanilla.js"></script> -->
+        <!-- <script type="text/babel" src="react.js"></script> -->
+        <script type="text/babel" src="react-jsx.js"></script>
     </body>
 </html>
