index file changed

--- a/LearningBasics/index.html
+++ b/LearningBasics/index.html
@@ -14,7 +14,7 @@
     <body>
         <div id="root"></div>
         <!-- <script src="vanilla.js"></script> -->
-        <!-- <script type="text/babel" src="react.js"></script> -->
-        <script type="text/babel" src="react-jsx.js"></script>
+        <script type="text/babel" src="react.js"></script>
+        <!-- <script type="text/babel" src="react-jsx.js"></script> -->
     </body>
 </html>
