--- a/Weather/public/index.html
+++ b/Weather/public/index.html
@@ -11,6 +11,8 @@
 		<!-- Don't use this in production: -->
 		<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 		
+		<link href="src/app.css" rel="appstylesheet">
+
 		<title>React App</title>
 	</head>
 	<body>
@@ -18,6 +20,6 @@
 			You need to enable JavaScript to run this app.
 		</noscript>
 		<div id="root"></div>
-
+		<script type="text/babel" src="src/app.js"></script>
 	</body>
 </html>
