--- a/React-Redux/index.html
+++ b/React-Redux/index.html
@@ -15,21 +15,12 @@
 				name: 'Ryu',
 				age: 30
 			}
-			
-			handleClick = (e) => {
-				console.log(e.target);
-				this.setState({
-					name: 'Yoshi'
-				});
-				console.log(this.state);
-			}
-			
-			handleMouseOver(e) {
-				console.log(e.target, e.pageX);
-			}
 
-			handleCopy(e) {
-				console.log('Try being original for once!');
+			handleChange = e => this.setState({ name: e.target.value })
+			
+			handleSubmit = e => {
+				e.preventDefault();
+				console.log('form submitted', this.state.name);
 			}
 
 			render() {
@@ -37,9 +28,10 @@
 					<div className="app-content">
 						<h1>Hey, ninjas</h1>
 						<p> My name is: { this.state.name } and I am {this.state.age} </p>
-						<button onClick={ this.handleClick }>Click Me</button>
-						<button onMouseOver={ this.handleMouseOver }>Hover Me</button>
-						<p onCopy={ this.handleCopy }>What we think, we become</p>
+						<form onSubmit={this.handleSubmit}>
+							<input type="text" onChange={this.handleChange}/>
+							<button>Submit</button>
+						</form>
 					</div>
 				)
 			}
